# haskell-image-processing-benchmark

./: LICENSE  README.md  haskell-image-processing-benchmark.cabal  koblenz.pgm  results-740ef4d.html  results.html
cbits/: haskell_image_processing_benchmark_opencv.c  haskell_image_processing_benchmark_opencv.cpp
src/: Main.hs
src/HaskellImageProcessingBenchmark/: Friday.hs  OpenCV.hs  Repa.hs  UnmHip.hs  Yarr.hs
