name:                haskell-image-processing-benchmark
version:             0.1.0.0
synopsis:            Benchmark different Haskell image processing libraries
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-image-processing-benchmark
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       criterion >=1.0.2.0 && <1.1,
                       friday >= 0.1.5 && <0.2,
                       unm-hip >=0.3.1.6 && <0.4,
                       yarr >= 1.3.2 && <1.4,
                       yarr-image-io >=1.3.0 && <1.4,
                       repa >= 3.2.3.3 && <3.3,
                       repa-devil >=0.3.2.2 && <0.4,
                       repa-algorithms >=3.2.4.1 && <3.3
  hs-source-dirs:      src
  default-language:    Haskell2010