name:                haskell-image-processing-benchmark
version:             0.1.0.0
synopsis:            Benchmark different Haskell image processing libraries
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-image-processing-benchmark
  main-is:             Main.hs
  other-modules:       HaskellImageProcessingBenchmark.Friday,
                       HaskellImageProcessingBenchmark.UnmHip,
                       HaskellImageProcessingBenchmark.Yarr,
                       HaskellImageProcessingBenchmark.Repa,
                       HaskellImageProcessingBenchmark.OpenCV
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       criterion ==1.0.2.0,
                       friday ==0.1.5,
                       unm-hip ==0.3.1.6,
                       yarr ==1.3.2,
                       yarr-image-io ==1.3.0,
                       repa ==3.2.3.3,
                       repa-devil ==0.3.2.2,
                       repa-algorithms ==3.2.4.1
  hs-source-dirs:      src
  C-sources:           cbits/haskell_image_processing_benchmark_opencv.cpp
  default-language:    Haskell2010
  ghc-options:         -rtsopts -O2 -threaded -with-rtsopts=-N